// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findMatchingOrders, updatesRequired false, bid balance 0 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "orderMatchRequests": Array [
    Object {
      "leftOrderAmount": 20,
      "leftOrderHash": "orderHash1",
      "matchingAmount": 20,
      "pair": "pair",
      "rightOrderAmount": 30,
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired false, no ask live order 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "orderMatchRequests": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired false, no bid live order 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "orderMatchRequests": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired false, no bids 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "orderMatchRequests": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired false, no matching 1`] = `
Object {
  "orderBookLevelUpdates": Array [],
  "orderMatchRequests": Array [],
}
`;

exports[`findMatchingOrders, updatesRequired true, ask balance 0 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -20,
      "count": -1,
      "price": 0.02,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": 0,
      "price": 0.02,
      "side": "ask",
    },
  ],
  "orderMatchRequests": Array [
    Object {
      "leftOrderAmount": 20,
      "leftOrderHash": "orderHash1",
      "matchingAmount": 20,
      "pair": "pair",
      "rightOrderAmount": 30,
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, bid balance after matching > 0 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -30,
      "count": 0,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -30,
      "count": -1,
      "price": 0.04,
      "side": "ask",
    },
  ],
  "orderMatchRequests": Array [
    Object {
      "leftOrderAmount": 20,
      "leftOrderHash": "orderHash1",
      "matchingAmount": 30,
      "pair": "pair",
      "rightOrderAmount": 30,
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, bid balance after matching > 0 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 0,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 0.04,
    },
    Object {
      "balance": 20,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 0.05,
    },
  ],
  "bids": Array [
    Object {
      "balance": 10,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 0.04,
    },
    Object {
      "balance": 30,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 0.01,
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, bid balance after matching > 0 3`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 20,
    "balance": 10,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 1,
    "matching": 30,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 0.04,
    "side": "bid",
  },
  "orderHash2": Object {
    "account": "account2",
    "amount": 30,
    "balance": 30,
    "createdAt": 1234567890,
    "currentSequence": 6,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 2,
    "matching": 0,
    "orderHash": "orderHash2",
    "pair": "pair",
    "price": 0.01,
    "side": "bid",
  },
  "orderHash3": Object {
    "account": "account3",
    "amount": 30,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 7,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 3,
    "matching": 30,
    "orderHash": "orderHash3",
    "pair": "pair",
    "price": 0.04,
    "side": "ask",
  },
  "orderHash4": Object {
    "account": "account4",
    "amount": 20,
    "balance": 20,
    "createdAt": 1234567890,
    "currentSequence": 8,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 4,
    "matching": 0,
    "orderHash": "orderHash4",
    "pair": "pair",
    "price": 0.05,
    "side": "ask",
  },
}
`;

exports[`findMatchingOrders, updatesRequired true, matching all, all partial filled 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -20,
      "count": -1,
      "price": 0.05,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": 0,
      "price": 0.04,
      "side": "ask",
    },
    Object {
      "change": -10,
      "count": 0,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -10,
      "count": -1,
      "price": 0.04,
      "side": "ask",
    },
    Object {
      "change": -20,
      "count": -1,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": -1,
      "price": 0.05,
      "side": "ask",
    },
  ],
  "orderMatchRequests": Array [
    Object {
      "leftOrderAmount": 20,
      "leftOrderHash": "orderHash1",
      "matchingAmount": 20,
      "pair": "pair",
      "rightOrderAmount": 30,
      "rightOrderHash": "orderHash3",
    },
    Object {
      "leftOrderAmount": 30,
      "leftOrderHash": "orderHash2",
      "matchingAmount": 10,
      "pair": "pair",
      "rightOrderAmount": 30,
      "rightOrderHash": "orderHash3",
    },
    Object {
      "leftOrderAmount": 30,
      "leftOrderHash": "orderHash2",
      "matchingAmount": 20,
      "pair": "pair",
      "rightOrderAmount": 20,
      "rightOrderHash": "orderHash4",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching all, all partial filled 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 0,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 0.04,
    },
    Object {
      "balance": 0,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 0.05,
    },
  ],
  "bids": Array [
    Object {
      "balance": 0,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 0.05,
    },
    Object {
      "balance": 0,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 0.04,
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching all, all partial filled 3`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 20,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 1,
    "matching": 20,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 0.05,
    "side": "bid",
  },
  "orderHash2": Object {
    "account": "account2",
    "amount": 30,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 6,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 2,
    "matching": 30,
    "orderHash": "orderHash2",
    "pair": "pair",
    "price": 0.04,
    "side": "bid",
  },
  "orderHash3": Object {
    "account": "account3",
    "amount": 30,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 7,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 3,
    "matching": 30,
    "orderHash": "orderHash3",
    "pair": "pair",
    "price": 0.04,
    "side": "ask",
  },
  "orderHash4": Object {
    "account": "account4",
    "amount": 20,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 8,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 4,
    "matching": 20,
    "orderHash": "orderHash4",
    "pair": "pair",
    "price": 0.05,
    "side": "ask",
  },
}
`;

exports[`findMatchingOrders, updatesRequired true, matching first bid and ask 1`] = `
Object {
  "orderBookLevelUpdates": Array [
    Object {
      "change": -20,
      "count": -1,
      "price": 0.04,
      "side": "bid",
    },
    Object {
      "change": -20,
      "count": 0,
      "price": 0.04,
      "side": "ask",
    },
  ],
  "orderMatchRequests": Array [
    Object {
      "leftOrderAmount": 20,
      "leftOrderHash": "orderHash1",
      "matchingAmount": 20,
      "pair": "pair",
      "rightOrderAmount": 30,
      "rightOrderHash": "orderHash3",
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching first bid and ask 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 10,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 0.04,
    },
    Object {
      "balance": 20,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 0.05,
    },
  ],
  "bids": Array [
    Object {
      "balance": 0,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 0.04,
    },
    Object {
      "balance": 30,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 0.01,
    },
  ],
}
`;

exports[`findMatchingOrders, updatesRequired true, matching first bid and ask 3`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 20,
    "balance": 0,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 1,
    "matching": 20,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 0.04,
    "side": "bid",
  },
  "orderHash2": Object {
    "account": "account2",
    "amount": 30,
    "balance": 30,
    "createdAt": 1234567890,
    "currentSequence": 6,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 2,
    "matching": 0,
    "orderHash": "orderHash2",
    "pair": "pair",
    "price": 0.01,
    "side": "bid",
  },
  "orderHash3": Object {
    "account": "account3",
    "amount": 30,
    "balance": 10,
    "createdAt": 1234567890,
    "currentSequence": 7,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 3,
    "matching": 20,
    "orderHash": "orderHash3",
    "pair": "pair",
    "price": 0.04,
    "side": "ask",
  },
  "orderHash4": Object {
    "account": "account4",
    "amount": 20,
    "balance": 20,
    "createdAt": 1234567890,
    "currentSequence": 8,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 0,
    "initialSequence": 4,
    "matching": 0,
    "orderHash": "orderHash4",
    "pair": "pair",
    "price": 0.05,
    "side": "ask",
  },
}
`;

exports[`processMatchQueue, no leftRawOrder 1`] = `
Array [
  Array [
    "match|queue",
  ],
]
`;

exports[`processMatchQueue, no leftRawOrder 2`] = `
Array [
  Array [
    "code1|code2",
    "0xleftHash",
  ],
]
`;

exports[`queueMatchRequest 1`] = `
Array [
  Array [
    "match|queue",
    "\\"matchRequest\\"",
  ],
]
`;
